error.txt
Download the React DevTools for a better development experience: https://reactjs.org/link/react-devtools react-dom.development.js:29905:19
cdn.tailwindcss.com should not be used in production. To use Tailwind CSS in production, install it as a PostCSS plugin or use the Tailwind CLI: https://tailwindcss.com/docs/installation cdn.tailwindcss.com:64:1711
You are using the in-browser Babel transformer. Be sure to precompile your scripts for production - https://babeljs.io/docs/setup/ babel.min.js:3:3069275
Uncaught SyntaxError: /Inline Babel script: Identifier 'updateItemQuantity' has already been declared. (517:18)

  515 |             };
  516 |
> 517 |             const updateItemQuantity = (itemName, quantity) => {
      |                   ^
  518 |                 setItemQuantities({
  519 |                     ...itemQuantities,
  520 |                     [itemName]: parseInt(quantity) || 0
    e https://unpkg.com/@babel/standalone/babel.min.js:3
    raise https://unpkg.com/@babel/standalone/babel.min.js:3
    checkRedeclarationInScope https://unpkg.com/@babel/standalone/babel.min.js:3
    declareName https://unpkg.com/@babel/standalone/babel.min.js:3
    declareName https://unpkg.com/@babel/standalone/babel.min.js:3
    declareNameFromIdentifier https://unpkg.com/@babel/standalone/babel.min.js:3
    checkIdentifier https://unpkg.com/@babel/standalone/babel.min.js:3
    checkLVal https://unpkg.com/@babel/standalone/babel.min.js:3
    parseVarId https://unpkg.com/@babel/standalone/babel.min.js:3
    parseVarId https://unpkg.com/@babel/standalone/babel.min.js:3
    parseVar https://unpkg.com/@babel/standalone/babel.min.js:3
    parseVarStatement https://unpkg.com/@babel/standalone/babel.min.js:3
    parseStatementContent https://unpkg.com/@babel/standalone/babel.min.js:3
    parseStatementLike https://unpkg.com/@babel/standalone/babel.min.js:3
    parseStatementLike https://unpkg.com/@babel/standalone/babel.min.js:3
    parseStatementListItem https://unpkg.com/@babel/standalone/babel.min.js:3
    parseBlockOrModuleBlockBody https://unpkg.com/@babel/standalone/babel.min.js:3
    parseBlockBody https://unpkg.com/@babel/standalone/babel.min.js:3
    parseBlock https://unpkg.com/@babel/standalone/babel.min.js:3
    parseFunctionBody https://unpkg.com/@babel/standalone/babel.min.js:3
    parseFunctionBody https://unpkg.com/@babel/standalone/babel.min.js:3
    forwardNoArrowParamsConversionAt https://unpkg.com/@babel/standalone/babel.min.js:3
    parseFunctionBody https://unpkg.com/@babel/standalone/babel.min.js:3
    parseArrowExpression https://unpkg.com/@babel/standalone/babel.min.js:3
    parseParenAndDistinguishExpression https://unpkg.com/@babel/standalone/babel.min.js:3
    parseParenAndDistinguishExpression https://unpkg.com/@babel/standalone/babel.min.js:3
    parseExprAtom https://unpkg.com/@babel/standalone/babel.min.js:3
    parseExprAtom https://unpkg.com/@babel/standalone/babel.min.js:3
    parseExprSubscripts https://unpkg.com/@babel/standalone/babel.min.js:3
    parseUpdate https://unpkg.com/@babel/standalone/babel.min.js:3
    parseMaybeUnary https://unpkg.com/@babel/standalone/babel.min.js:3
    parseMaybeUnaryOrPrivate https://unpkg.com/@babel/standalone/babel.min.js:3
    parseExprOps https://unpkg.com/@babel/standalone/babel.min.js:3
    parseMaybeConditional https://unpkg.com/@babel/standalone/babel.min.js:3
    parseMaybeAssign https://unpkg.com/@babel/standalone/babel.min.js:3
    parseMaybeAssign https://unpkg.com/@babel/standalone/babel.min.js:3
    Mv https://unpkg.com/@babel/standalone/babel.min.js:3
    allowInAnd https://unpkg.com/@babel/standalone/babel.min.js:3
    parseMaybeAssignAllowIn https://unpkg.com/@babel/standalone/babel.min.js:3
    parseVar https://unpkg.com/@babel/standalone/babel.min.js:3
    parseVarStatement https://unpkg.com/@babel/standalone/babel.min.js:3
    parseStatementContent https://unpkg.com/@babel/standalone/babel.min.js:3
    parseStatementLike https://unpkg.com/@babel/standalone/babel.min.js:3
    parseStatementLike https://unpkg.com/@babel/standalone/babel.min.js:3
    parseModuleItem https://unpkg.com/@babel/standalone/babel.min.js:3
    parseBlockOrModuleBlockBody https://unpkg.com/@babel/standalone/babel.min.js:3
    parseBlockBody https://unpkg.com/@babel/standalone/babel.min.js:3
    parseProgram https://unpkg.com/@babel/standalone/babel.min.js:3
    parseTopLevel https://unpkg.com/@babel/standalone/babel.min.js:3
    parseTopLevel https://unpkg.com/@babel/standalone/babel.min.js:3
    parse https://unpkg.com/@babel/standalone/babel.min.js:3
    eR https://unpkg.com/@babel/standalone/babel.min.js:3
    t https://unpkg.com/@babel/standalone/babel.min.js:3
    s https://unpkg.com/@babel/standalone/babel.min.js:3
    s https://unpkg.com/@babel/standalone/babel.min.js:3
    s https://unpkg.com/@babel/standalone/babel.min.js:3
    s https://unpkg.com/@babel/standalone/babel.min.js:3
    s https://unpkg.com/@babel/standalone/babel.min.js:3
    s https://unpkg.com/@babel/standalone/babel.min.js:3
    s https://unpkg.com/@babel/standalone/babel.min.js:3
    s https://unpkg.com/@babel/standalone/babel.min.js:3
    gF https://unpkg.com/@babel/standalone/babel.min.js:3
    sync https://unpkg.com/@babel/standalone/babel.min.js:3
    qV https://unpkg.com/@babel/standalone/babel.min.js:3
    kEe https://unpkg.com/@babel/standalone/babel.min.js:3
    text https://unpkg.com/@babel/standalone/babel.min.js:3
    hEe https://unpkg.com/@babel/standalone/babel.min.js:3
    n https://unpkg.com/@babel/standalone/babel.min.js:3
    xEe https://unpkg.com/@babel/standalone/babel.min.js:3
    NEe https://unpkg.com/@babel/standalone/babel.min.js:3
    NEe https://unpkg.com/@babel/standalone/babel.min.js:3
    OEe https://unpkg.com/@babel/standalone/babel.min.js:3
babel.min.js:3:258680
Source map error: Error: NetworkError when attempting to fetch resource.
Resource URL: https://unpkg.com/@babel/standalone/babel.min.js
Source Map URL: babel.min.js.map
